--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,59 @@
 body {
-  background-color: grey;
-  font-family: 'Times New Roman', Times, serif;
+  background: linear-gradient(135deg, rgba(181, 180, 180, 0.8), rgba(255, 255, 255, 0.8));
+  font-family: "Times New Roman", Times, serif;
+  font-size: 18px;
+  text-align: center;
+  margin: 0;
+  padding: 0;
 }
 
-a {
-  padding: 20px;
-  color: black;
-  font-size: 30px;
+nav {
+  background-color: rgb(22, 126, 126);
+  padding: 15px 0;
+  font-weight: 200;
+  text-align: center;
 }
+
+nav a {
+  color: white;
+  font-size: 22px;
+  padding: 15px;
+  text-decoration: none;
+  display: inline-block;
+  transition: all 0.3s ease;
+}
+
+nav a:hover {
+  background-color: rgb(16, 98, 98);
+  transform: scale(1.1);
+}
+
+
 img {
-  width: 300px;
+  width: 200px;
+  border-radius: 10px;
+  transition: transform 0.3s ease;
 }
+
+img:hover {
+  transform: scale(1.1);
+}
+
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+  border-radius: 10px;
+}
+
+footer {
+  background-color: rgb(22, 126, 126);
+  color: white;
+  text-align: center;
+  padding: 20px 0;
+  position: absolute;
+  width: 100%;
+  bottom: 0;
+}
+
