--- a/styles.css
+++ b/styles.css
@@ -30,13 +30,9 @@ nav a:hover {
 
 
 img {
-  width: 200px;
+  width: 50%;
+  height: 50%;
   border-radius: 10px;
-  transition: transform 0.3s ease;
-}
-
-img:hover {
-  transform: scale(1.1);
 }
 
 .center {
@@ -52,7 +48,6 @@ footer {
   color: white;
   text-align: center;
   padding: 20px 0;
-  position: absolute;
   width: 100%;
   bottom: 0;
 }
