--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -23,15 +23,15 @@ Fonts are separated by a & */
 
 
   /* these colors below should be chosen from among your palette colors above */
-  --headline-color-on-white: #5f6060; /* headlines on a white background */
+  --headline-color-on-white: black; /* headlines on a white background */
   --headline-color-on-color: white; /* headlines on a colored background */
-  --paragraph-color-on-white: #5e5d5d; /* paragraph text on a white background */
+  --paragraph-color-on-white: black; /* paragraph text on a white background */
   --paragraph-color-on-color: white; /* paragraph text on a colored background */
-  --paragraph-background-color: #396e94;
-  --nav-link-color: #396e94;
+  --paragraph-background-color: black;
+  --nav-link-color: black;
   --nav-background-color: #d2b74a;
   --nav-hover-link-color: rgb(53, 85, 160);
-  --nav-hover-background-color: #e2e9ee;
+  --nav-hover-background-color: white;
 }
 
 /*  Look around below...but DON'T CHANGE ANYTHING! */
