--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -4,14 +4,39 @@
 }
 .home-title {
 }
-nav a {
+header {
+  background-color: #4d84ab;
+  height: 150px;
+  contain: content;
+  height: auto;
+}
+#logo {
+  display: inline;
+  float: left;
+  height: auto;
+  margin: 20px;
+}
+#logo img{
+  width: 125px;
+  margin: 40px;
+}
+#nav {
+  display: inline;
+  float: left;
+  width: 70%;
+  height: 30px;
+  margin-left: 10%;
+  margin-top: 80px;
+}
+#nav a {
   text-align: center;
   color: #fcfbfb;
   text-decoration: none;
+  font-size: 60px;
+  margin-right: 35px;
 }
-nav a:hover {
-  background-color: black;
-  color: #d9c2a3;
+#nav a:hover {
+  color: rgb(141, 61, 61);
 }
 h4 {
 }
@@ -24,6 +49,10 @@ h4 {
 .icon {
   width: 80px;
 }
+
+#hero-img {
+  width: 100%;
+}
 .button-box {
   text-align: center;
 }
@@ -34,39 +63,51 @@ main section {
   height: 725px;
 }
 body {
-  background-color: #fcfbfb;
+  background-color: #d6bebe;
+  width: 100%;
 }
-header {
-  background-color: rgba(20, 30, 13, 0.7);
-}
-nav a:hover {
-  background-color: black;
-}
+
 .book {
-}
-.join {
+  background-color: #ee811c;
+  color: black;
+  text-decoration: none;
 }
 .book:hover {
+  background-color: #c9b4b4;
+  color: black;
+}
+.join {
+  background-color: #ee811c;
+  color: black;
+  text-decoration: none;
 }
 .join:hover {
-}
-#background {
+  background-color: #c4b2b2;
+  color: black;
 }
 .msg {
+  background-color: #bca9a9;
 }
 .msg h2 {
+  color: black;
 }
 .msg p {
+  color: black;
 }
 footer {
+  background-color: #277bb8;
+  color: black;
 }
 footer a {
+  color: black;
+  text-decoration: none;
+}
+footer a:hover {
+  color: black;
 }
 footer p {
   font-size: 1.2em;
 }
-footer p a:hover{
-    text-decoration: underline;
-}
-footer a:hover {S
+footer p a:hover {
+  text-decoration: underline;
 }
