--- a/styles.css
+++ b/styles.css
@@ -45,6 +45,13 @@ img {
   width: 50%;
   border-radius: 10px;
 }
+#section2 {
+  width: 100%;
+}
+#mtns .img {
+  width: 30%;
+  float: left;
+}
 
 footer {
   background-color: rgb(22, 126, 126);
