--- a/Rynoridge/styles/site-plan.css
+++ b/Rynoridge/styles/site-plan.css
@@ -1,7 +1,7 @@
 /* if you are using any Google fonts change the font names below to your fonts. 
 Any spaces in your font name should be replaced with a +. 
 Fonts are separated by a | */
-@import url("https://fonts.googleapis.com/css2?family=Poiret+One&family=Protest+Revolution&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Chelsea+Market&family=Rubik+Distressed&display=swap');
 
 :root {
   /* change the values below to your colors from your palette */
@@ -11,8 +11,8 @@ Fonts are separated by a | */
   --accent2-color: #eaf0ce; /*White*/
 
   /* change the values below to your chosen font(s) */
-  --heading-font: Protest Revolution, bold, sans-serif;
-  --paragraph-font: Poiret One, sans-serif;
+  --heading-font: 'Rubik Distressed', sans-serif;
+  --paragraph-font: 'Chelsea Market', sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
   --headline-color-on-white: #574b60; /* headlines on a white background */
@@ -34,6 +34,7 @@ body {
   padding: 4em;
   font-size: 18px;
   text-align: center;
+  font-family: var(--paragraph-font);
 }
 
 img {
