--- a/Rynoridge/styles/styles.css
+++ b/Rynoridge/styles/styles.css
@@ -114,22 +114,69 @@ header {
   z-index: -1;
 }
 
-.hero-text {
-  max-width: 800px;
-  text-align: center;
-  background-color: rgba(0, 0, 0, 0.5); /* Optional: Add a semi-transparent background for better text readability */
-  padding: 20px;
-  border-radius: 10px;
+.flip-card {
+  background-color: transparent;
+  width: 50%;
+  height: 50%;
+  perspective: 1000px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.hero-text h1 {
-  font-size: 2.5em;
+.flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.6s;
+  transform-style: preserve-3d;
+}
+
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+
+.flip-card-front, .flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  transition: background-color 0.5s, color 0.5s;
+  background-color: var(--primary-color);
+  color: var(--headline-color-on-color);
+  border: 6px solid var(--accent1-color);
+}
+
+.flip-card-front {
+  background-color: rgba(0, 0, 0, 0.5); /* Optional: Add a semi-transparent background for better text readability */
+  color: var(--headline-color-on-color);
+}
+
+.flip-card-back {
+  background-color: var(--primary-color);
+  color: var(--headline-color-on-white);
+  transform: rotateY(180deg);
+}
+
+.flip-card-front h1,
+.flip-card-back h1 {
+  font-size: 3em; /* Increased font size */
   font-weight: 300; /* Further reduced font weight */
   font-family: var(--heading-font);
 }
 
-.hero-text p {
-  font-size: 1.2em;
+.flip-card-front p,
+.flip-card-back p {
+  font-size: 1.5em; /* Increased font size */
   margin: 20px 0;
   font-family: var(--paragraph-font);
 }
